--- a/task1.html
+++ b/task1.html
@@ -57,7 +57,7 @@
 				<tr>
 					<td>胡日环</td>
 					<td>男</td>
-					<td>25</td>
+					<td colspan="2">25</td>
 				</tr>
 				<tr>
 					<td>总计</td>
